Refine Agenda UI: Fix header spacing and improve card button layout

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -580,6 +580,9 @@ video {
 .z-10 {
   z-index: 10;
 }
+.m-0 {
+  margin: 0px;
+}
 .m-8 {
   margin: 2rem;
 }
